@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!DOCTYPE gsdoc PUBLIC "-//GNUstep//DTD gsdoc 0.6.6//EN" "http://www.gnustep.org/gsdoc-0_6_6.xml">
-<gsdoc base="NSNotificationQueue" prev="NSNotificationCenter" next="NSNumber" up="Base">
+<gsdoc base="NSNotificationQueue" prev="NSNotificationCenter" next="NSNull" up="Base">
   <head>
     <title>NSNotificationQueue</title>
     <author name="Richard Frith-Macdonald">
