@@ -1,0 +1,33 @@
+<?xml version="1.0"?>
+<!DOCTYPE gsdoc PUBLIC "-//GNUstep//DTD gsdoc 0.6.6//EN" "http://www.gnustep.org/gsdoc-0_6_6.xml">
+<gsdoc base="NSNull" prev="NSNotificationQueue" next="NSNumber" up="Base">
+  <head>
+    <title>NSNull</title>
+    <author name="Richard Frith-Macdonald">
+      <email address="rfm@gnu.org"/>
+      <url url="http://www.gnustep.org/developers/whoiswho.html"/>
+    </author>
+    <version>0.1</version>
+    <date>21 October, 2000</date>
+  </head>
+  <body>
+    <chapter>
+      <heading>NSNull</heading>
+      <class name="NSNull" super="NSObject">
+        <declared>Foundation/NSNull.h</declared>
+        <conform>NSObject</conform>
+        <conform>NSCoding</conform>
+        <conform>NSCopying</conform>
+          <desc>
+          </desc>
+        <method type="NSNull*" factory="yes">
+          <sel>null</sel>
+          <desc>
+	    Return an object that can be used as a placeholder in a collection.
+	    This method always returns the same object.
+          </desc>
+        </method>
+      </class>
+    </chapter>
+  </body>
+</gsdoc>
