@@ -1,0 +1,44 @@
+<html><head>
+ <title>NSNull</title>
+</head>
+<body>
+<a href ="NSNotificationQueue.html">[Previous]</a>
+<a href ="Base.html">[Up]</a>
+<a href ="NSNumber.html">[Next]</a>
+<h1>NSNull</h1>
+<h3>Authors </h3>
+ <dl>
+<dt><a href ="http://www.gnustep.org/developers/whoiswho.html">Richard Frith-Macdonald</a>
+<dd>
+</dl>
+<p>Version: 0.1</p>
+<p>Date: 21 October, 2000</p>
+<h2><a name ="cont-0">NSNull</a></h2>
+<h2><a name ="NSNull">NSNull</a></h2>
+<p><b>Declared in: </b> Foundation/NSNull.h</p>
+<p><b>Inherits from: </b> NSObject</p>
+<p><b>Conforms to: </b> NSObject
+,  NSCoding
+,  NSCopying
+</p>
+<hr>
+
+          
+<h2>Instance Variables </h2>
+<ul>
+</ul>
+<h2>Methods </h2>
+<ul>
+<li><a href ="NSNull.html#method-0">+null</a>
+</ul>
+<hr><h2>Class Methods </h2>
+<h3><a name ="method-0">null</a></h3>
++ (NSNull*) <b>null</b>;<br>
+
+	    Return an object that can be used as a placeholder in a collection.
+	    This method always returns the same object.
+          
+ <hr>
+</body>
+
+ </html>
